feat: add results section

--- a/src/index.html
+++ b/src/index.html
@@ -380,6 +380,132 @@
         </div>
       </section>
 
+      <section class="page__results results">
+        <div class="results__container _container">
+          <h2 class="results__title"><span class="_highlight">Результаты </span> студентов</h2>
+          <ul class="results__list">
+            <li class="results__item result">
+              <h3 class="result__title">Результаты 2021</h3>
+              <div class="result__paragraphs">
+                <p class="result__paragraph">Из <span class="_highlight">193 дисциплин</span>, составленных в июне 2021
+                  года, студентами получено:</p>
+                <p class="result__paragraph">Из <span class="_highlight">40 выпускников </span> в 2021 году:
+                </p>
+              </div>
+              <ul class="result__estimates">
+                <li class="result__estimate estimate">
+                  <img src="assets/img/circular-stroke-1.png" alt="" class="estimate__indicator">
+                  <span class="estimate__number">63%</span>
+                  <div class="estimate__info">
+                    <img src="assets/img/rectangular-sroke.png" alt="" class="estimate__stroke">
+                    <h4 class="estimate__view">Оценки A*</h4>
+                    <p class="estimate__paragraph">(средний показатель Королевства Великобритании – <span>19.1%</span>)
+                    </p>
+                  </div>
+                </li>
+
+                <li class="result__estimate estimate">
+                  <img src="assets/img/circular-stroke-1.png" alt="" class="estimate__indicator">
+                  <span class="estimate__number">75%</span>
+                  <div class="estimate__info">
+                    <img src="assets/img/rectangular-sroke.png" alt="" class="estimate__stroke">
+                    <h4 class="estimate__view">оценки A – A* по всем предметам</h4>
+                  </div>
+                </li>
+
+                <li class="result__estimate estimate">
+                  <img src="assets/img/circular-stroke-1.png" alt="" class="estimate__indicator">
+                  <span class="estimate__number">91%</span>
+                  <div class="estimate__info">
+                    <img src="assets/img/rectangular-sroke.png" alt="" class="estimate__stroke">
+                    <h4 class="estimate__view">Оценки A* – А</h4>
+                    <p class="estimate__paragraph">(средний показатель Королевства Великобритании – <span>44.8%</span>)
+                    </p>
+                  </div>
+                </li>
+
+                <li class="result__estimate estimate">
+                  <img src="assets/img/circular-stroke-1.png" alt="" class="estimate__indicator">
+                  <span class="estimate__number">40%</span>
+                  <div class="estimate__info">
+                    <img src="assets/img/rectangular-sroke.png" alt="" class="estimate__stroke">
+                    <h4 class="estimate__view">Достигли 3 и более A*</h4>
+                  </div>
+                </li>
+
+                <li class="result__estimate estimate">
+                  <img src="assets/img/circular-stroke-1.png" alt="" class="estimate__indicator">
+                  <span class="estimate__number">91%</span>
+                  <div class="estimate__info">
+                    <img src="assets/img/rectangular-sroke.png" alt="" class="estimate__stroke">
+                    <h4 class="estimate__view">Оценки A* – А</h4>
+                    <p class="estimate__paragraph">(средний показатель Королевства Великобритании – <span>44.8%</span>)
+                    </p>
+                  </div>
+                </li>
+
+                <li class="result__estimate estimate">
+                  <img src="assets/img/circular-stroke-1.png" alt="" class="estimate__indicator">
+                  <span class="estimate__number">35%</span>
+                  <div class="estimate__info">
+                    <img src="assets/img/rectangular-sroke.png" alt="" class="estimate__stroke">
+                    <h4 class="estimate__view">достигли A* по всем своим предметам</h4>
+                  </div>
+                </li>
+              </ul>
+
+              <h4 class="result__subtitle">Тематические достижения:</h4>
+
+              <ul class="result__achieves">
+                <li class="result__achieve achieve">
+                  <img src="assets/img/circular-stroke-2.png" alt="" class="estimate__indicator">
+                  <span class="achieve__number">100%</span>
+                  <p class="achieve__paragraph">студентов получили A* по курсу “Современные языки”</p>
+                </li>
+
+                <li class="result__achieve achieve">
+                  <img src="assets/img/circular-stroke-2.png" alt="" class="estimate__indicator">
+                  <span class="achieve__number">100%</span>
+                  <p class="achieve__paragraph">студентов получили A* по курсу “Высшая математика”</p>
+                </li>
+
+                <li class="result__achieve achieve">
+                  <img src="assets/img/circular-stroke-2.png" alt="" class="estimate__indicator">
+                  <span class="achieve__number">100%</span>
+                  <p class="achieve__paragraph">студентов получили А-A* из курсов “Химия”, “Биология” и “Физика”</p>
+                </li>
+
+                <li class="result__achieve achieve">
+                  <img src="assets/img/circular-stroke-2.png" alt="" class="estimate__indicator">
+                  <span class="achieve__number">100%</span>
+                  <p class="achieve__paragraph">студентов получили A - A* из курсов “Изобразительное искусство”,
+                    “История искусства”</p>
+                </li>
+              </ul>
+              <span class="result__hide"><img src="assets/svg/minus-hide.svg" alt="Close arrow image"></span>
+            </li>
+
+            <li class="results__item result">
+              <h3 class="result__title">Результаты 2020</h3>
+              <span class="result__show"><img src="assets/svg/plus-show.svg" alt="Close arrow image"></span>
+            </li>
+
+            <li class="results__item result">
+              <h3 class="result__title">Результаты 2019</h3>
+              <span class="result__show"><img src="assets/svg/plus-show.svg" alt="Close arrow image"></span>
+            </li>
+          </ul>
+          <img src="assets/svg/star-1.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-2.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-3.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-4.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-5.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-6.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-7.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-8.svg" alt="" class="stories__star">
+        </div>
+      </section>
+
       <section class="page__stories stories">
         <div class="stories__container _container">
           <h2 class="stories__title"><span class="_highlight">Истории</span> выпускников</h2>
