feat: add universities section

--- a/src/index.html
+++ b/src/index.html
@@ -284,9 +284,6 @@
               </li>
             </ul>
           </div>
-
-
-
         </div>
       </section>
 
@@ -500,6 +497,124 @@
           <img src="assets/svg/star-6.svg" alt="" class="stories__star">
           <img src="assets/svg/star-7.svg" alt="" class="stories__star">
           <img src="assets/svg/star-8.svg" alt="" class="stories__star">
+        </div>
+      </section>
+
+      <section class="page__universities universities">
+        <div class="universities__container _container">
+          <h2 id="universities" class="universities__title _title"><span class="_highlight">В какие вузы
+            </span>поступают выпускники
+          </h2>
+
+          <ul class="universities__filters">
+            <li class="universities__filter filter">AHS 2021</li>
+            <li class="universities__filter">AHS 2020</li>
+            <li class="universities__filter">AHS 2019</li>
+          </ul>
+
+          <div class="universities__body">
+            <div class="universities__wrapper">
+              <img class="universities__image" src="./assets/img/colorful-circle-stroke.png"
+                alt="Image colorful circle stroke" />
+              <img class="universities__image" src="./assets/img/master's-hat.png" alt="Image master's hat" />
+              <h5>56%<br> Британия</h5>
+              <h5>17%<br> Европа</h5>
+              <h5>12%<br> США</h5>
+              <h5>10%<br> Польша</h5>
+              <h5>5%<br> Взяли<br> перерыв</h5>
+            </div>
+
+            <div class="universities__text">
+              <h3 class="universities__heading">Среди них:</h3>
+              <h4 class="universities__subheading">100%</h4>
+              <p class="universities__paragraph">студентов, подававшихся в этом году в ВУЗы Великобритании, были
+                причислены к ним
+              </p>
+              <h4 class="universities__subheading">23 аппликанта</h4>
+              <p class="universities__paragraph">в Великобританию завоевали места в университетах ТОП-20 Великобритании
+                или ТОП-10 Великобритании по специальности (согласно Complete University Range), таких как:
+              </p>
+              <ul class="universities__specialties">
+                <li class="universities__speciality"><b>University of Cambridge</b> (2 студента)</li>
+                <li class="universities__speciality"><b>University of Oxford</b> (2 студента)</li>
+                <li class="universities__speciality"><b>Imperial College London</b> (2 студента)</li>
+                <li class="universities__speciality"><b>University College London</b> (5 студентов)</li>
+                <li class="universities__speciality"><b>University of St. Andrews</b> (2 студента)</li>
+                <li class="universities__speciality"><b>University of Bath </b> (1 студент)</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="universities__subjects subjects">
+            <!-- <h6 class="subjects__title">Студенты получили места в университетах согласно своим страстям и
+              интересам:</h6> -->
+            <ul class="subjects__programs">
+              <li class="subjects__title">
+                <h6 class="program__university">Студенты получили места в<br> университетах согласно своим<br> страстям и
+                  интересам:</h6>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/aerospace-engineering.svg">
+                <h3 class="program__name">Аэрокосмическая инженерия</h3>
+                <p class="program__university">DELFT UNIVERSITY OF TECHNOLOGY</p>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/eurasian-policy.svg">
+                <h3 class="program__name">Политики Евразии</h3>
+                <p class="program__university">SCIENCE PO (LE HAVRE)</p>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/biomedical-engineering.svg">
+                <h3 class="program__name">Биомедицинская инженерия</h3>
+                <p class="program__university">IMPERIAL COLLEGE LONDON</p>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/computer-science.svg">
+                <h3 class="program__name">Компьютерные науки</h3>
+                <p class="program__university">LANCASTER UNIVERSITY</p>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/economics-management.svg">
+                <h3 class="program__name">Экономика и менеджмент,</h3>
+                <p class="program__university">BOCCONI UNIVERSITY</p>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/geography.svg">
+                <h3 class="program__name">География</h3>
+                <p class="program__university">UNIVERSITY OF OXFORD</p>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/art-history.svg">
+                <h3 class="program__name">История искусства</h3>
+                <p class="program__university">UNIVERSITY OF CAMBRIDGE</p>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/drama.svg">
+                <h3 class="program__name">Драматургия</h3>
+                <p class="program__university">NYU TISCH SCHOOL OF THE ARTSY</p>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/theoretical-physics.svg">
+                <h3 class="program__name">Теоретическая физика</h3>
+                <p class="program__university">UNIVERSITY COLLEGE LONDON</p>
+              </li>
+
+              <li class="subjects__program program">
+                <img class="program__image" src="./assets/svg/universities/textile-design.svg">
+                <h3 class="program__name">Текстильный дизайн</h3>
+                <p class="program__university">DGLASGOW SCHOOL OF ARTS</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
